Fix vertical align of team images in footer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -653,7 +653,7 @@ h2 {
         display: inline-block;
         width: 5%;
         margin: 1em;
-        vertical-align: middle;
+        vertical-align: top;
         min-width: 5rem;
     }
 
